tests/fixtures/pass/dynamic_array_oob.sali
let main(): i32 = {
  let values = [42]
  let index = 1
  values[index]
}
