tests/fixtures/fail/array_empty_without_context.sali
let main(): i32 = {
  let values = []
  42
}
